# csvr

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.html  TODO.md  about.hbs  about.toml  renovate.json
.cargo/: config.toml
.claude/rules/: design.md  gpui.md
.github/workflows/: README.md  auto-release.yml  build.yml  claude-code-review.yml  claude.yml  issue-implement.yml  lint.yml  test.yml
assets/: LICENSE  icon.icns
docs/: setup.md
examples/: sample.csv
scripts/: screenshot.sh
src/: app.rs  chart.rs  compute.rs  data.rs  main.rs
