[package]
name = "csvr"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", tag = "v0.188.6" }
csv = "1"
regex = "1.12.3"
chardetng = "0.1.17"
encoding_rs = "0.8.35"
calamine = { version = "0.34.0", features = ["dates"] }
objc = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"cargo-clippy\"))"] }
